# orxtra

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml  selfdoc.json
agent/: DESIGN.md  pyproject.toml
agent/.rlsbl/: config.json
agent/.rlsbl/changes/: unreleased.jsonl
agent/src/orxt/agent/: __init__.py  _loader.py  _prompt.py  _types.py
agent/src/orxtra/agent/: __init__.py  _categories.py  _loader.py  _types.py
agent/tests/: test_categories.py  test_loader.py  test_prompt.py  test_types.py
cli/: DESIGN.md  pyproject.toml
cli/.rlsbl/: config.json
cli/.rlsbl/changes/: unreleased.jsonl
cli/src/orxt/cli/: _cli.py  _formatters.py
cli/src/orxtra/cli/: __init__.py  _cli.py
cli/tests/: test_cli.py  test_formatters.py
dispatch/: pyproject.toml
dispatch/src/orxtra/dispatch/: __init__.py  _action_executor.py  _delivery.py  _memory_backend.py  _pg_backend.py  _protocols.py  _schema.py  _types.py
dispatch/tests/: _handlers.py  conftest.py  test_accumulator.py  test_action_executor.py  test_delivery.py  test_dual_delivery.py  test_memory_backend.py  test_pg_backend.py  test_types.py
knowledge-module/: DESIGN.md  pyproject.toml
knowledge-module/.github/workflows/: ci.yml
knowledge-module/.rlsbl/: config.json
knowledge-module/.rlsbl/changes/: unreleased.jsonl
knowledge-module/src/orxt/knowledge_module/: __init__.py  _cognee_import.py  _config.py  _freshness.py  _ingest.py  _retrieve.py  _types.py
knowledge-module/src/orxtra/knowledge_module/: __init__.py  _config.py  _freshness.py  _ingest.py  _types.py  (+1 more)
knowledge-module/tests/: test_cognee_helper.py  test_cognee_missing.py  test_datapoints.py  test_freshness.py  test_ingest.py  test_pg_hash_cache.py  test_retrieve.py  test_tag_filtering.py  test_types.py
mcp/: DESIGN.md  pyproject.toml
mcp/.rlsbl/: config.json
mcp/.rlsbl/changes/: unreleased.jsonl
mcp/tests/: conftest.py  test_server.py  test_tools.py
notepad/: DESIGN.md  pyproject.toml
notepad/.rlsbl/: config.json
notepad/.rlsbl/changes/: unreleased.jsonl
notepad/tests/: conftest.py  test_format.py  test_reader.py
overseer/: DESIGN.md  pyproject.toml
overseer/.rlsbl/: config.json  hashes.json
overseer/.rlsbl/changes/: unreleased.jsonl
overseer/tests/: conftest.py  test_autonomy.py  test_format.py  test_health.py  test_knowledge.py  test_learning.py  test_memory.py  test_overseer.py  test_overseer_lifecycle.py  test_overseer_tools.py  test_tools.py
protocols/: CHANGELOG.md  DESIGN.md  pyproject.toml
protocols/.rlsbl/: config.json
protocols/.rlsbl/changes/: unreleased.jsonl
protocols/tests/: test_contracts.py  test_results.py  test_sync.py  test_types.py
scheduler/: DESIGN.md  pyproject.toml
scheduler/.rlsbl/: config.json
scheduler/.rlsbl/changes/: unreleased.jsonl
scheduler/tests/: conftest.py  test_agent_tools.py  test_allow_resolver.py  test_autonomy_gating.py  test_budget.py  test_check_executor.py  test_coherence.py  test_constraints.py  test_context_awareness.py  test_crash_recovery.py  test_custom_tools.py  test_degraded_handlers.py  test_escalation_events.py  test_escalation_policies.py  test_events.py  test_executor.py  test_for_each_iterations.py  test_graph.py  test_headless.py  test_integration.py  test_loader.py  test_locks.py  test_orchestrator.py  test_overseer_integration.py  test_pause_resume.py  test_pg_listen.py  test_services.py  test_signal_delivery.py  test_streaming.py  test_tool_registry.py  test_types.py  test_validator.py  test_wait_for.py
secrets/: DESIGN.md  pyproject.toml
secrets/.github/workflows/: ci.yml
secrets/.rlsbl/: config.json
secrets/.rlsbl/changes/: unreleased.jsonl
secrets/tests/: test_registry.py
services/: DESIGN.md  pyproject.toml
services/.github/workflows/: publish.yml
services/.rlsbl/: config.json
services/.rlsbl/changes/: unreleased.jsonl
services/tests/: conftest.py  test_actions.py  test_ask.py  test_config.py  test_dispatch.py  test_events.py  test_flush.py  test_inbox.py  test_providers.py  test_run.py  test_trace_service.py  test_validate.py
session/: DESIGN.md  pyproject.toml
session/.rlsbl/: config.json
session/.rlsbl/changes/: unreleased.jsonl
session/tests/: conftest.py  test_event_callbacks.py  test_factory.py  test_pricing.py  test_session.py  test_session_reload.py  test_session_resume.py  test_session_suspension.py  test_sync.py
tool/: DESIGN.md  pyproject.toml
tool/.rlsbl/: config.json
tool/.rlsbl/changes/: unreleased.jsonl
tool/tests/: test_consult_fixes.py  test_consult_tool.py  test_decorator.py  test_discovery.py  test_exec_tool.py  test_git_tool.py  test_gitignore.py  test_http_tool.py  test_load_tools.py  test_multi_edit.py  test_notepad_tool.py  test_path.py  test_pipeline.py  test_preview.py  test_read_tools.py  test_renderers.py  test_shell_tool.py  test_task_tools.py  test_tool_metadata.py  test_validation.py  test_write_integration.py  test_write_tools.py
trace/: DESIGN.md  pyproject.toml
trace/.rlsbl/: config.json  managed-files.json
trace/.rlsbl/changes/: unreleased.jsonl
trace/tests/: conftest.py  test_lock.py  test_memory_backend.py  test_protocols.py  test_reader.py  test_recovery.py  test_replay.py  test_transitions.py  test_writer.py
transport/: DESIGN.md  pyproject.toml
transport/.rlsbl/: config.json
transport/.rlsbl/changes/: unreleased.jsonl
transport/tests/: test_anthropic.py  test_events.py  test_google_provider.py  test_history_compaction.py  test_liveness.py  test_openai.py  test_provider.py  test_rate_limit.py  test_state_machine.py  test_streaming.py  test_tool_progress.py  test_transport.py  test_unknown_event.py
verify/: DESIGN.md  pyproject.toml
verify/.rlsbl/: config.json
verify/.rlsbl/changes/: unreleased.jsonl
verify/tests/: conftest.py  sample_checks.py  test_execution.py  test_runner.py  test_types.py
write-safety/: DESIGN.md  pyproject.toml
write-safety/.rlsbl/: config.json  managed-files.json
write-safety/.rlsbl/changes/: unreleased.jsonl
write-safety/tests/: test_atomic.py  test_queue.py  test_replay.py  test_stale.py  test_stress.py
(+338 files in other folders)
