# orxt monorepo root
# Not a publishable package. Each sub-project has its own pyproject.toml.
# This file makes the root installable so e2e tests can import all sub-projects.

[project]
name = "orxt"
version = "0.1.0"
license = "BUSL-1.1"
description = "Autonomous multi-agent AI workflows"
requires-python = ">=3.12"
dependencies = [
    "orxt-protocols",
    "orxt-secrets",
    "orxt-write-safety",
    "orxt-transport",
    "orxt-agent",
    "orxt-tool",
    "orxt-verify",
    "orxt-trace",
    "orxt-notepad",
    "orxt-session",
    "orxt-scheduler",
    "orxt-overseer",
    "orxt-knowledge-module",
    "orxt-services",
    "orxt-cli",
    "orxt-mcp",
]

[tool.uv.workspace]
members = [
    "protocols",
    "secrets",
    "write-safety",
    "transport",
    "agent",
    "tool",
    "verify",
    "trace",
    "notepad",
    "session",
    "scheduler",
    "overseer",
    "knowledge-module",
    "services",
    "cli",
    "mcp",
]

[tool.uv.sources]
orxt-protocols = { workspace = true }
orxt-secrets = { workspace = true }
orxt-write-safety = { workspace = true }
orxt-transport = { workspace = true }
orxt-agent = { workspace = true }
orxt-tool = { workspace = true }
orxt-verify = { workspace = true }
orxt-trace = { workspace = true }
orxt-notepad = { workspace = true }
orxt-session = { workspace = true }
orxt-scheduler = { workspace = true }
orxt-overseer = { workspace = true }
orxt-knowledge-module = { workspace = true }
orxt-services = { workspace = true }
orxt-cli = { workspace = true }
orxt-mcp = { workspace = true }

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "asyncpg-stubs",
    "mypy",
    "ruff",
    "testcontainers[postgres]",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle -- no docstrings by convention
    "COM812",  # trailing comma (conflicts with ruff format)
    "ISC001",  # implicit string concat (conflicts with ruff format)
    "T201",    # print() -- needed in CLI
    "FBT",     # boolean positional args -- too noisy for tool constructors
    "TD",      # todo comments -- not relevant
    "FIX",     # fixme comments -- not relevant
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "S101",    # assert in tests is fine
    "PLR2004", # magic values in tests are fine
    "ARG",     # unused args in fixtures are fine
    "INP001",  # tests are implicit namespace packages
]
"**/_task.py" = ["TC002", "TC003"]   # pydantic models need runtime imports
"**/_tools.py" = ["TC002", "TC003"]  # pydantic models need runtime imports
"**/_execution.py" = ["TC002", "TC003"]  # pydantic models need runtime imports
"**/_types.py" = ["TC002", "TC003"]  # pydantic models need runtime imports
"**/_writer.py" = ["PLR0913"]  # DB write methods have many columns

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "uuid6.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "strictcli.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pathspec.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cognee.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "respx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "orxt.cli._cli"
disallow_untyped_decorators = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
