# orxt -- single publishable package
# Sub-projects remain as workspace members for development but are never published separately.
# hatch force-include maps all 16 sub-project source dirs into the wheel.

[project]
name = "orxt"
version = "0.1.0"
license = "BUSL-1.1"
description = "Autonomous multi-agent AI workflows"
requires-python = ">=3.12"
dependencies = [
    "asyncpg",
    "cognee",
    "httpx",
    "jsonschema",
    "pathspec",
    "pydantic>=2",
    "strictcli",
    "uuid6",
]
keywords = ["rlsbl"]

[project.scripts]
orxt = "orxt.cli._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "pyproject.toml",
    "protocols/src/",
    "secrets/src/",
    "write-safety/src/",
    "transport/src/",
    "agent/src/",
    "tool/src/",
    "verify/src/",
    "trace/src/",
    "notepad/src/",
    "session/src/",
    "scheduler/src/",
    "overseer/src/",
    "overseer/prompts/",
    "knowledge-module/src/",
    "services/src/",
    "cli/src/",
    "mcp/src/",
]

[tool.hatch.build.targets.wheel.force-include]
"protocols/src/orxt/protocols" = "orxt/protocols"
"secrets/src/orxt/secrets" = "orxt/secrets"
"write-safety/src/orxt/write_safety" = "orxt/write_safety"
"transport/src/orxt/transport" = "orxt/transport"
"agent/src/orxt/agent" = "orxt/agent"
"tool/src/orxt/tool" = "orxt/tool"
"verify/src/orxt/verify" = "orxt/verify"
"trace/src/orxt/trace" = "orxt/trace"
"notepad/src/orxt/notepad" = "orxt/notepad"
"session/src/orxt/session" = "orxt/session"
"scheduler/src/orxt/scheduler" = "orxt/scheduler"
"overseer/src/orxt/overseer" = "orxt/overseer"
"overseer/prompts" = "orxt/overseer/prompts"
"knowledge-module/src/orxt/knowledge_module" = "orxt/knowledge_module"
"services/src/orxt/services" = "orxt/services"
"cli/src/orxt/cli" = "orxt/cli"
"mcp/src/orxt/mcp" = "orxt/mcp"

[tool.uv.workspace]
members = [
    "protocols",
    "secrets",
    "write-safety",
    "transport",
    "agent",
    "tool",
    "verify",
    "trace",
    "notepad",
    "session",
    "scheduler",
    "overseer",
    "knowledge-module",
    "services",
    "cli",
    "mcp",
]

[tool.uv.sources]
orxt-protocols = { workspace = true }
orxt-secrets = { workspace = true }
orxt-write-safety = { workspace = true }
orxt-transport = { workspace = true }
orxt-agent = { workspace = true }
orxt-tool = { workspace = true }
orxt-verify = { workspace = true }
orxt-trace = { workspace = true }
orxt-notepad = { workspace = true }
orxt-session = { workspace = true }
orxt-scheduler = { workspace = true }
orxt-overseer = { workspace = true }
orxt-knowledge-module = { workspace = true }
orxt-services = { workspace = true }
orxt-cli = { workspace = true }
orxt-mcp = { workspace = true }

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "asyncpg-stubs",
    "mypy",
    "ruff",
    "testcontainers[postgres]",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle -- no docstrings by convention
    "COM812",  # trailing comma (conflicts with ruff format)
    "ISC001",  # implicit string concat (conflicts with ruff format)
    "T201",    # print() -- needed in CLI
    "FBT",     # boolean positional args -- too noisy for tool constructors
    "TD",      # todo comments -- not relevant
    "FIX",     # fixme comments -- not relevant
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "S101",    # assert in tests is fine
    "PLR2004", # magic values in tests are fine
    "ARG",     # unused args in fixtures are fine
    "INP001",  # tests are implicit namespace packages
]
"**/_task.py" = ["TC002", "TC003"]   # pydantic models need runtime imports
"**/_tools.py" = ["TC002", "TC003"]  # pydantic models need runtime imports
"**/_execution.py" = ["TC002", "TC003"]  # pydantic models need runtime imports
"**/_types.py" = ["TC002", "TC003"]  # pydantic models need runtime imports
"**/_writer.py" = ["PLR0913"]  # DB write methods have many columns

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "uuid6.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "strictcli.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pathspec.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cognee.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "respx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "orxt.cli._cli"
disallow_untyped_decorators = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
