# orxtra -- single publishable package
# Sub-projects remain as workspace members for development but are never published separately.
# hatch force-include maps all 15 sub-project source dirs into the wheel.

[project]
name = "orxtra"
version = "0.1.0"
license = "BUSL-1.1"
description = "Autonomous multi-agent AI workflows"
requires-python = ">=3.12"
dependencies = [
    "asyncpg",
    "httpx",
    "jsonschema",
    "pathspec",
    "pydantic>=2",
    "strictcli",
    "uuid6",
]
keywords = ["rlsbl"]

[project.scripts]
orxtra = "orxtra.cli._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "pyproject.toml",
    "protocols/src/",
    "secrets/src/",
    "write-safety/src/",
    "transport/src/",
    "agent/src/",
    "tool/src/",
    "verify/src/",
    "trace/src/",
    "notepad/src/",
    "session/src/",
    "scheduler/src/",
    "overseer/src/",
    "services/src/",
    "cli/src/",
    "mcp/src/",
]

[tool.hatch.build.targets.wheel.force-include]
"protocols/src/orxtra/protocols" = "orxtra/protocols"
"secrets/src/orxtra/secrets" = "orxtra/secrets"
"write-safety/src/orxtra/write_safety" = "orxtra/write_safety"
"transport/src/orxtra/transport" = "orxtra/transport"
"agent/src/orxtra/agent" = "orxtra/agent"
"tool/src/orxtra/tool" = "orxtra/tool"
"verify/src/orxtra/verify" = "orxtra/verify"
"trace/src/orxtra/trace" = "orxtra/trace"
"notepad/src/orxtra/notepad" = "orxtra/notepad"
"session/src/orxtra/session" = "orxtra/session"
"scheduler/src/orxtra/scheduler" = "orxtra/scheduler"
"overseer/src/orxtra/overseer" = "orxtra/overseer"
"services/src/orxtra/services" = "orxtra/services"
"cli/src/orxtra/cli" = "orxtra/cli"
"mcp/src/orxtra/mcp" = "orxtra/mcp"

[tool.uv.workspace]
members = [
    "protocols",
    "secrets",
    "write-safety",
    "transport",
    "agent",
    "tool",
    "verify",
    "trace",
    "notepad",
    "session",
    "scheduler",
    "overseer",
    "services",
    "cli",
    "mcp",
]

[tool.uv.sources]
orxtra-protocols = { workspace = true }
orxtra-secrets = { workspace = true }
orxtra-write-safety = { workspace = true }
orxtra-transport = { workspace = true }
orxtra-agent = { workspace = true }
orxtra-tool = { workspace = true }
orxtra-verify = { workspace = true }
orxtra-trace = { workspace = true }
orxtra-notepad = { workspace = true }
orxtra-session = { workspace = true }
orxtra-scheduler = { workspace = true }
orxtra-overseer = { workspace = true }
orxtra-services = { workspace = true }
orxtra-cli = { workspace = true }
orxtra-mcp = { workspace = true }

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "asyncpg-stubs",
    "mypy",
    "ruff",
    "testcontainers[postgres]",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle -- no docstrings by convention
    "COM812",  # trailing comma (conflicts with ruff format)
    "ISC001",  # implicit string concat (conflicts with ruff format)
    "T201",    # print() -- needed in CLI
    "FBT",     # boolean positional args -- too noisy for tool constructors
    "TD",      # todo comments -- not relevant
    "FIX",     # fixme comments -- not relevant
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "S101",    # assert in tests is fine
    "PLR2004", # magic values in tests are fine
    "ARG",     # unused args in fixtures are fine
    "INP001",  # tests are implicit namespace packages
]
"**/_task.py" = ["TC002", "TC003"]   # pydantic models need runtime imports
"**/_tools.py" = ["TC002", "TC003"]  # pydantic models need runtime imports
"**/_execution.py" = ["TC002", "TC003"]  # pydantic models need runtime imports
"**/_types.py" = ["TC002", "TC003"]  # pydantic models need runtime imports
"**/_writer.py" = ["PLR0913"]  # DB write methods have many columns
"scripts/**" = [
    "S603",    # subprocess calls are expected in scripts
    "INP001",  # scripts are implicit namespace packages
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "strictcli.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "orxtra.cli._cli"
disallow_untyped_decorators = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
