[project]
name = "orxt-agent"
version = "0.0.0"
description = "Agent definition loader. TOML + composable .md prompts, strict validation, category resolution."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
]
keywords = ["rlsbl"]

[dependency-groups]
dev = ["pytest>=9.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]
