[project]
name = "orxt-cli"
version = "0.0.0"
license = "BUSL-1.1"
description = "strictcli CLI frontend. Agents are the primary users."
requires-python = ">=3.12"
dependencies = [
    "strictcli",
    "orxt-services",
    "orxt-trace",
]
keywords = ["rlsbl"]

[project.scripts]
orxt = "orxt.cli._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]

[tool.uv.sources]
orxt-services = { workspace = true }
orxt-trace = { workspace = true }
