[project]
name = "orxtra-cli"
version = "0.1.1"
license = "BUSL-1.1"
description = "strictcli CLI frontend. Agents are the primary users."
requires-python = ">=3.12"
dependencies = [
    "strictcli",
    "orxtra-services",
    "orxtra-trace",
]
keywords = ["rlsbl"]

[project.scripts]
orxtra = "orxtra.cli._cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxtra"]

[tool.uv.sources]
orxtra-services = { workspace = true }
orxtra-trace = { workspace = true }
