[project]
name = "orxtra-dispatch"
version = "0.1.1"
license = "BUSL-1.1"
description = "Event delivery: subscriptions, action dispatch, accumulator flush."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "orxtra-protocols",
    "uuid6",
]
keywords = ["rlsbl"]

[dependency-groups]
dev = ["pytest-asyncio>=1.4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxtra"]

[tool.uv.sources]
orxtra-protocols = { workspace = true }
