[project]
name = "knowledge-module"
version = "0.0.0"
description = "Experimental semantic enrichment via cognee. Knowledge graph over the lessons table."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "trace",
    "cognee",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]

[tool.uv.sources]
trace = { path = "../trace", editable = true }
