[project]
name = "orxt-knowledge-module"
version = "0.1.1"
license = "BUSL-1.1"
description = "Experimental semantic enrichment via cognee. Knowledge graph over the lessons table."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "cognee",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]
