[project]
name = "mcp"
version = "0.0.0"
description = "MCP server exposing the orxt API. Human interface via dashboard or AI client."
requires-python = ">=3.12"
dependencies = [
    "services",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]

[tool.uv.sources]
services = { workspace = true }

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
