[project]
name = "orxt-mcp"
version = "0.1.0"
license = "BUSL-1.1"
description = "MCP server exposing the orxt API. Human interface via dashboard or AI client."
requires-python = ">=3.12"
dependencies = [
    "orxt-services",
    "orxt-trace",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]

[tool.uv.sources]
orxt-services = { workspace = true }
orxt-trace = { workspace = true }

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
