[project]
name = "orxtra-mcp"
version = "0.6.0"
license = "BUSL-1.1"
description = "MCP server exposing the orxtra API. Human interface via dashboard or AI client."
requires-python = ">=3.12"
dependencies = [
    "orxtra-services",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxtra"]

[tool.uv.sources]
orxtra-services = { workspace = true }

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
