[project]
name = "notepad"
version = "0.0.0"
description = "Append-only cross-agent context sharing. PG-backed via the trace schema."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "trace",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notepad"]

[tool.uv.sources]
trace = { path = "../trace", editable = true }
