[project]
name = "orxt-notepad"
version = "0.0.0"
description = "Append-only cross-agent context sharing. PG-backed via the trace schema."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "orxt-trace",
]
keywords = ["rlsbl"]

[dependency-groups]
dev = ["pytest-asyncio>=1.4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]

[tool.uv.sources]
orxt-trace = { workspace = true }
