[project]
name = "overseer"
version = "0.0.0"
description = "Persistent LLM with action tools, PG memory, health monitoring, session handoff."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "orxt-protocols",
    "trace",
    "session",
    "knowledge-module",
    "tool",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]

[tool.uv.sources]
orxt-protocols = { workspace = true }
trace = { workspace = true }
session = { workspace = true }
knowledge-module = { workspace = true }
tool = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "uuid6>=2025.0.1",
]
