[project]
name = "orxt-overseer"
version = "0.1.1"
license = "BUSL-1.1"
description = "Persistent LLM with action tools, PG memory, health monitoring, session handoff."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "orxt-protocols",
    "orxt-trace",
    "orxt-session",
    "orxt-tool",
    "orxt-transport",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]

[tool.uv.sources]
orxt-protocols = { workspace = true }
orxt-trace = { workspace = true }
orxt-session = { workspace = true }
orxt-tool = { workspace = true }
orxt-transport = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "uuid6>=2025.0.1",
]
