[project]
name = "orxtra-overseer"
version = "0.7.0"
license = "BUSL-1.1"
description = "Persistent LLM with action tools, PG memory, health monitoring, session handoff."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "orxtra-protocols",
    "orxtra-trace",
    "orxtra-session",
    "orxtra-tool",
    "orxtra-transport",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxtra"]

[tool.uv.sources]
orxtra-protocols = { workspace = true }
orxtra-trace = { workspace = true }
orxtra-session = { workspace = true }
orxtra-tool = { workspace = true }
orxtra-transport = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "uuid6>=2025.0.1",
]
