[project]
name = "orxtra-protocols"
version = "0.2.0"
license = "BUSL-1.1"
description = "Shared types: Execution, task lifecycle, event descriptors, action tool schemas, check results."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxtra"]
