[project]
name = "scheduler"
version = "0.0.0"
description = "Task executor. Recursive task hierarchy, dependency graphs, budgets, constraints, crash recovery."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "jsonschema",
    "orxt-protocols",
    "orxt-write-safety",
    "agent",
    "tool",
    "session",
    "trace",
    "verify",
    "notepad",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]

[tool.uv.sources]
orxt-protocols = { workspace = true }
orxt-write-safety = { workspace = true }
agent = { workspace = true }
tool = { workspace = true }
session = { workspace = true }
trace = { workspace = true }
verify = { workspace = true }
notepad = { workspace = true }
