[project]
name = "orxt-scheduler"
version = "0.1.1"
license = "BUSL-1.1"
description = "Task executor. Recursive task hierarchy, dependency graphs, budgets, constraints, crash recovery."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "jsonschema",
    "orxt-protocols",
    "orxt-write-safety",
    "orxt-agent",
    "orxt-tool",
    "orxt-session",
    "orxt-trace",
    "orxt-verify",
    "orxt-notepad",
    "orxt-overseer",
    "orxt-secrets",
    "orxt-transport",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]

[tool.uv.sources]
orxt-protocols = { workspace = true }
orxt-write-safety = { workspace = true }
orxt-agent = { workspace = true }
orxt-tool = { workspace = true }
orxt-session = { workspace = true }
orxt-trace = { workspace = true }
orxt-verify = { workspace = true }
orxt-notepad = { workspace = true }
orxt-overseer = { workspace = true }
orxt-secrets = { workspace = true }
orxt-transport = { workspace = true }
