[project]
name = "orxtra-scheduler"
version = "0.1.1"
license = "BUSL-1.1"
description = "Task executor. Recursive task hierarchy, dependency graphs, budgets, constraints, crash recovery."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "jsonschema",
    "orxtra-protocols",
    "orxtra-write-safety",
    "orxtra-agent",
    "orxtra-tool",
    "orxtra-session",
    "orxtra-trace",
    "orxtra-verify",
    "orxtra-notepad",
    "orxtra-secrets",
    "orxtra-transport",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxtra"]

[tool.uv.sources]
orxtra-protocols = { workspace = true }
orxtra-write-safety = { workspace = true }
orxtra-agent = { workspace = true }
orxtra-tool = { workspace = true }
orxtra-session = { workspace = true }
orxtra-trace = { workspace = true }
orxtra-verify = { workspace = true }
orxtra-notepad = { workspace = true }
orxtra-secrets = { workspace = true }
orxtra-transport = { workspace = true }
