[project]
name = "orxt-secrets"
version = "0.0.0"
description = "Secret registry, substitution, and scrubbing. Secrets never reach the model or the database."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]
