[project]
name = "orxtra-secrets"
version = "0.7.0"
license = "BUSL-1.1"
description = "Secret registry, substitution, and scrubbing. Secrets never reach the model or the database."
requires-python = ">=3.12"
dependencies = []
keywords = ["rlsbl"]

[dependency-groups]
dev = ["pytest>=9.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxtra"]
