[project]
name = "orxtra-services"
version = "0.1.1"
license = "BUSL-1.1"
description = "Shared business logic for all frontends. Run, inbox, trace queries, validation, config."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "asyncpg",
    "orxtra-agent",
    "orxtra-protocols",
    "orxtra-scheduler",
    "orxtra-session",
    "orxtra-overseer",
    "orxtra-trace",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxtra"]

[tool.uv.sources]
orxtra-agent = { workspace = true }
orxtra-protocols = { workspace = true }
orxtra-scheduler = { workspace = true }
orxtra-session = { workspace = true }
orxtra-overseer = { workspace = true }
orxtra-trace = { workspace = true }
