[project]
name = "orxt-session"
version = "0.0.0"
description = "Session lifecycle, token tracking, cross-restart resumption via PG transcripts."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "orxt-transport",
    "orxt-trace",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]

[tool.uv.sources]
orxt-transport = { workspace = true }
orxt-trace = { workspace = true }
