[project]
name = "orxt-session"
version = "0.1.0"
license = "BUSL-1.1"
description = "Session lifecycle, token tracking, cross-restart resumption via PG transcripts."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "orxt-protocols",
    "orxt-transport",
    "orxt-trace",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]

[tool.uv.sources]
orxt-protocols = { workspace = true }
orxt-transport = { workspace = true }
orxt-trace = { workspace = true }
