[project]
name = "orxtra-session"
version = "0.1.1"
license = "BUSL-1.1"
description = "Session lifecycle, token tracking, cross-restart resumption via PG transcripts."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "orxtra-protocols",
    "orxtra-transport",
    "orxtra-trace",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxtra"]

[tool.uv.sources]
orxtra-protocols = { workspace = true }
orxtra-transport = { workspace = true }
orxtra-trace = { workspace = true }
