[project]
name = "tool"
version = "0.0.0"
description = "Tool registry with granular constructors. Path enforcement, write safety, no-truncation previews."
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "jsonschema",
    "pydantic>=2",
    "orxt-protocols",
    "orxt-secrets",
    "orxt-write-safety",
]

[tool.uv.sources]
orxt-protocols = { path = "../protocols", editable = true }
orxt-secrets = { path = "../secrets", editable = true }
orxt-write-safety = { path = "../write-safety", editable = true }

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]
