[project]
name = "orxt-tool"
version = "0.0.0"
description = "Tool registry with granular constructors. Path enforcement, write safety, no-truncation previews."
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "jsonschema",
    "pathspec",
    "pydantic>=2",
    "orxt-protocols",
    "orxt-secrets",
    "orxt-write-safety",
]
keywords = ["rlsbl"]

[tool.uv.sources]
orxt-protocols = { workspace = true }
orxt-secrets = { workspace = true }
orxt-write-safety = { workspace = true }

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]
