[project]
name = "orxtra-tool"
version = "0.1.1"
license = "BUSL-1.1"
description = "Tool registry with granular constructors. Path enforcement, write safety, no-truncation previews."
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "jsonschema",
    "pathspec",
    "pydantic>=2",
    "orxtra-protocols",
    "orxtra-secrets",
    "orxtra-write-safety",
]
keywords = ["rlsbl"]

[tool.uv.sources]
orxtra-protocols = { workspace = true }
orxtra-secrets = { workspace = true }
orxtra-write-safety = { workspace = true }

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxtra"]
