[project]
name = "orxtra-trace"
version = "0.6.0"
license = "BUSL-1.1"
description = "PG schema owner. Events, task results, transcripts, inbox, state machines, crash recovery."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "asyncpg",
    "uuid6",
]
keywords = ["rlsbl"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxtra"]
