[project]
name = "orxtra-transport"
version = "0.1.1"
license = "BUSL-1.1"
description = "Typed LLM client via Provider protocol. Raw httpx, streaming events, tool-call loop, auto-retry."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "httpx",
    "uuid6",
    "orxtra-protocols",
]
keywords = ["rlsbl"]

[tool.uv.sources]
orxtra-protocols = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orxtra"]
