[project]
name = "verify"
version = "0.0.0"
description = "Verification runner. Ordered callable chains, structured verdicts, severity-gated blocking."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "orxt-protocols",
]

[tool.uv.sources]
orxt-protocols = { path = "../protocols", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]
