[project]
name = "orxt-verify"
version = "0.1.1"
license = "BUSL-1.1"
description = "Verification runner. Ordered callable chains, structured verdicts, severity-gated blocking."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "orxt-protocols",
]
keywords = ["rlsbl"]

[tool.uv.sources]
orxt-protocols = { workspace = true }

[dependency-groups]
dev = ["pytest-asyncio>=1.4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxt"]
