[project]
name = "orxtra-verify"
version = "0.7.0"
license = "BUSL-1.1"
description = "Verification runner. Ordered callable chains, structured verdicts, severity-gated blocking."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "orxtra-protocols",
]
keywords = ["rlsbl"]

[tool.uv.sources]
orxtra-protocols = { workspace = true }

[dependency-groups]
dev = ["pytest-asyncio>=1.4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxtra"]
