[project]
name = "orxtra-write-safety"
version = "0.1.1"
license = "BUSL-1.1"
description = "Write queue, stale-write detection, atomic replace, transient replay."
requires-python = ">=3.12"
dependencies = []
keywords = ["rlsbl"]

[dependency-groups]
dev = ["pytest-asyncio>=1.4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orxtra"]
